Wed Jun  1 06:29:27 2011  Pat Rankin  <rankin@pactechdata.com>

	* re.c (check_bracket_exp): Fix typo.

Tue May 31 23:01:00 2011  John Haque      <j.eh@mchsi.com>

	* re.c (check_bracket_exp): Use mem* routines instead of str*
	for searching.
	* main.c (arg_assign): Disallow builtin or user-defined function
	as the name of a variable.
	* awkgram.y (check_special): Rework so can be called from
	arg_assign.

Tue May 31 22:23:41 2011  Arnold D. Robbins  <arnold@skeeve.com>

	In order to attain the goal of having ranges act like they are
	always in the C locale, bit the bullet and did the work in
	the regex and dfa engines. The pre-processing routine was not
	handling too many cases that a full regexp parser would catch.

	* regex.h [RE_RANGES_IGNORE_LOCALES]: New syntax bit.
	(RE_SYNTAX_GNU_AWK): Use it.
	* dfa.c (parse_bracket_exp): If the RE_RANGES_IGNORE_LOCALES
	is set, ignore locales when building a range.
	* re.c (expand_range): Remove function and declaration.
	(add_char): Remove function and declaration.
	(make_regexp): Remove use of expand_range.
	(resetup): Add RE_RANGES_IGNORE_LOCALES if --traditional.
	* regcomp.c (build_range_exp): Add syntax variable as last argument.
	Add code to check for RE_RANGES_IGNORE_LOCALES and do the right thing.
	Adjust all calls.

Sun May 29 22:48:41 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* re.c (expand_range): Handle cases where expanded range
	includes '\\' (and ']'). Thanks to Juergen Daubert <jue@jue.li>.
	Fatal error if end point is below start point ([z-a]),
	thanks to John Haque.  Don't repeat the last character in
	the expansion. Thanks to Arnold Robbins.

Fri May 27 10:01:17 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.84: Third beta test tar ball for 4.0.

Thu May 26 22:10:08 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* field.c (get_field): Enhance logic for setting NF if we're
	using FPAT to parse fields. Can end up with weird cases. Thanks
	to Pat Rankin for pointing them out.
