@@ -1,3 +1,8 @@
+Fri Jun  3 10:39:17 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* regcomp.c (build_range_exp): Make syntax the first argument,
+	for compatibility with gnulib version of the file.
+
 Wed Jun  1 06:29:27 2011  Pat Rankin  <rankin@pactechdata.com>
 
 	* re.c (check_bracket_exp): Fix typo.
